--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://AbdelrhmanAttiea.github.io/medical website",
+  "homepage": "https://AbdelrhmanAttiea.github.io/medical-website",
   "name": "medical-",
   "version": "0.1.0",
   "private": true,
